tests/Checker/everything/errors/8b.vc
void a() {
    return 1;
}

int main() { return 1; }
